# adaptive-sampling

./: .gitignore  AUTHORS  ChangeLog  Makefile.R  Makefile.am  README  README.R  README.md  adaptive-sampling.1  adaptive-sampling.in  adaptive-sampling.py  adaptive-sampling.xml  bayesian-binning.1  bayesian-binning.in  bayesian-binning.py  bayesian-binning.xml  config.h.in  configure.ac  libtool  probtype.h.in  py-compile  roxygen.R  version.h.in
AdaptiveSampling/: DESCRIPTION  NAMESPACE
R/: Makefile  Makefile.R  README  makefile  roxygen_adaptive.sampling.gp.R  roxygen_multibin.summation.R  roxygen_prombs.R
adaptive.sampling/: DESCRIPTION  NAMESPACE
adaptive_sampling/: Makefile.am  adaptive_sampling.py  bayesian_binning.py  config.py  interface.py  policy.py  statistics.py  visualization.py
auxtools/: Makefile.am  matlab.sh
bayesian-binning/: Makefile.am  bayesian-binning-gmp.c  bayesian-binning-log.c  bayesian-binning.c  bayesian-binning.h  bayesian-binning.py  datatypes.h  example.c  example.h  example.i  interface.c  interface.h  interface.i  logadd.h  main.c  prombs.c  prombs.h
bayesian_binning/: Makefile.am  adaptive_sampling.py  bayesian-binning-test.c  bayesian-binning-test.h  bayesian-binning.c  bayesian-binning.h  bayesian_binning.py  binning.py  break-probabilities.c  break-probabilities.h  config.py  datatypes.h  effective-counts.c  effective-counts.h  entropy.c  entropy.h  interface.c  interface.h  interface.i  interface.py  marginal.c  marginal.h  model-posterior.c  model-posterior.h  model.c  model.h  moment.c  moment.h  sampling.py  statistics.py  utility.h  visualization.py
data/: Makefile.am  data1.cfg  data10.cfg  data11.cfg  data12.cfg  data12.result1  data12.result2  data12.result3  data12.result4  data12.result5  data12.result6  data12.result7  data12.result8  data13.result1  data13.result2  data13.result3  data13.result4  data14.cfg  data2.cfg  data2.py  data3.cfg  data3.result  data4.cfg  data4.result  data5.cfg  data5.result  data6.cfg  data6.result  data7.cfg  data7.result  data8.cfg  data8.py  data8.result  data9.cfg
data/binning/: data1-parameters.py  data1-visualization.py  data1.cfg  data2.cfg  data2.py
data/binning-spikes/: G833C11R4_2tone-PSTH_Exci-Gibbs.cfg  G833C11R4_2tone-PSTH_Exci-Gibbs.result  G833C11R4_2tone-PSTH_Exci.cfg  G833C11R4_2tone-PSTH_Exci.result  G833C11R5_2tone-PSTH_Inhib-parameters.py  G833C11R5_2tone-PSTH_Inhib.cfg  G833C11R5_2tone-PSTH_Inhib.result  G833C1R8_PSTH.cfg  G833C1R8_PSTH.result  G833C3R9_2tone-PSTH_Inhib-visualization.py  G833C3R9_2tone-PSTH_Inhib.cfg  G833C3R9_2tone-PSTH_Inhib.result  data1-parameters.py  data1-visualization.py  data1.cfg  data1.py  data1.result  data2-parameters.py  data2.cfg  data2.result  data3-parameters.py  data3-visualization.py  data3.cfg  data3.result  data4-parameters.py  data4.cfg  data4.result
data/claudia/: experiment-filter.py  experiment.cfg  simulation.cfg  simulation.sh  simulation1-01.result  simulation1-02.result  simulation1-03.result  simulation1-04.result  simulation1-05.result  simulation1-06.result  simulation1-07.result  simulation1-08.result  simulation1-09.result  simulation1-10.result  simulation1.cfg  simulation10-01.result  simulation10-02.result  simulation10-03.result  simulation10-04.result  simulation10-05.result  simulation10-06.result  simulation10-07.result  simulation10-08.result  simulation10-09.result  simulation10-10.result  simulation10-filter.py  simulation10.cfg  simulation2-01.result  simulation2-02.result  simulation2-03.result  simulation2-04.result  simulation2-05.result  simulation2-06.result  simulation2-07.result  simulation2-08.result  simulation2-09.result  simulation2-10.result  simulation2.cfg  simulation3-01.result  simulation3-02.result  (+76 more)
data/sampling/: data1-parameters.py  data1-visualization.py  data1.cfg  data1.py  data1.result1  data1.result2  data1.result3  data1.result4  data2-parameters.py  data2-visualization.py  data2.cfg  data2.py  data2.result1  data2.result2  data2.result3  data2.result4  data3-parameters.py  data3-visualization.py  data3.cfg  data3.py  data3.result1  data3.result2  data3.result3  data3.result4  data4-parameters.py  data4-visualization.py  data4.cfg  data4.py
debian/: adaptive-sampling.README.Debian  adaptive-sampling.examples  adaptive-sampling.install  bayesian-binning.README.Debian  bayesian-binning.examples  bayesian-binning.install  changelog  control  copyright  libadaptive-sampling0-dev.install  libadaptive-sampling0.install  libbayesian-binning0-dev.install  libbayesian-binning0.install  rules
doc/: Makefile  binning.bib  binning.tex  binning_abstract.texinput  binning_appendix.texinput  binning_theory.texinput  binning_title.texinput  conglomerate.bib  conglomerate.tex  (+9 more)
include/: Makefile  Makefile.am  bayes_datatypes.h.in  bayes_exception.h  bayes_linalg.h  bayes_logarithmetic.h  bayes_prombs.h  exception.h  logarithmetic.h  probtype.h.in  prombs.h
include/adaptive-sampling/: datatypes.h  datatypes.h.in  exception.h  interface.h  linalg.h  logarithmetic.h  mgs.h  probtype.h  prombs.h
include/bayes/: datatypes.h.in  linalg.h  logarithmetic.h  mgs.h  prombs.h
matlab/: Makefile.am  README  adaptive_sampling.c  adsamp.m  binningPosterior.c  categorial_sample.m  count_statistic.m  default_alpha.m  default_beta.m  default_gamma.m  default_options.m  demo.m  example.c  example0.m  example1.m  example2.m  example3.m  example4.m  getNumberOfCores.m  interface.c  interface.h  lnchoose.m  plot_binning.m  plot_density.m  plot_marginal.m  plot_moments.m  prombs.c  prombsExtended.c  prombsExtendedTest.m  prombsTest.m  samplingUtility.c
src/: Makefile.am  bayesian-binning-test.c  bayesian-binning-test.h  bayesian-binning.c  bayesian-binning.h  break-probabilities.c  break-probabilities.h  datatypes.h  density.c  density.h  effective-counts.c  effective-counts.h  entropy.c  entropy.h  interface.c  interface.h  main-test.c  main.c  marginal.c  marginal.h  model-posterior.c  model-posterior.h  model.c  model.h  moment.c  moment.h  threading.c  threading.h  tools.h  utility.c  utility.h
(+194 files in other folders)
