## Process this file with automake to produce Makefile.in

EXTRA_DIST = \
	binning/*.cfg                          \
        binning/*.py                           \
        binning/*.pdf                          \
        binning-spikes/*.cfg                   \
        binning-spikes/*.py                    \
        binning-spikes/*.pdf                   \
        sampling/*.cfg                         \
        sampling/*.py                          \
        sampling/*.pdf                         \
        sampling/*.result*
