## Process this file with automake to produce Makefile.in

pkginclude_HEADERS = \
	adaptive-sampling/interface.h \
	adaptive-sampling/linalg.h \
	adaptive-sampling/prombs.h \
	adaptive-sampling/datatypes.h \
	adaptive-sampling/logarithmetic.h \
	adaptive-sampling/exception.h \
	adaptive-sampling/mgs.h

## install headers
include_HEADERS =

## include headers in distribution
EXTRA_DIST = \
	adaptive-sampling/uthash.h \
	gnugetopt.h
