## Process this file with automake to produce Makefile.in

pkginclude_HEADERS = \
	adaptive-sampling/datatypes.h \
	adaptive-sampling/interface.h \
	adaptive-sampling/linalg.h \
	adaptive-sampling/probtype.h \
	adaptive-sampling/prombs.h

## install headers
include_HEADERS =

## include headers in distribution
EXTRA_DIST = \
	adaptive-sampling/exception.h \
	adaptive-sampling/logarithmetic.h \
	adaptive-sampling/mgs.h \
	adaptive-sampling/uthash.h \
	gnugetopt.h
